# pargen

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: main.cpp
example_grammars/: js_like.bnf  json_subset.bnf  simple_math_expressions.bnf  sql_subset.bnf
include/codegen/: CodeGenerator.h  LexerGenerator.h  ParserGenerator.h
include/pargen/: Automaton.h  BNFParser.h  Entities.h  GrammarAnalyzer.h  Helpers.h  TableBuilder.h
src/codegen/: CodeGenerator.cpp  LexerGenerator.cpp  ParserGenerator.cpp
src/pargen/: Automaton.cpp  BNFParser.cpp  Entities.cpp  GrammarAnalyzer.cpp  Helpers.cpp  TableBuilder.cpp
test/: TestAutomaton.cpp  TestBNFParser.cpp  TestFuzz.cpp  TestGrammarAnalyzer.cpp  TestHelpers.cpp  TestHelpers.h  TestTableBuilder.cpp  test_bnfparser.cpp
